# abbyy_algos_22

./: README.md  Result.txt
1_1/: README.md
1_2/: README.md
1_3/: README.md
1_4/: README.md
1_5/: main.cpp
1_6/: CMakeLists.txt  README.md  main.cpp  main.h  run.cpp
1_6/process_deals/: process_deals.cpp  process_deals.hpp
1_6/tests/: sample_input  sample_output_latest  sample_output_oldest  test.cpp
1_6/tools/: CMakeLists.txt  tools.cpp
2_1/: README.md  main.cpp
2_2/: README.md  main.cpp
2_3/: README.md  main.cpp
2_4/: README.md  main.cpp
3_1/: README.md  main.cpp
3_2/: README.md  main.cpp
3_3/: README.md  main.cpp
3_4/: README.md  main.cpp
4_1/: 4_1_1.cpp  4_1_2.cpp  4_1_3.cpp  4_1_4.cpp
4_3/: 4_3_1.cpp
4_4/number-of-islands/: README.md  main.cpp
4_4/redundant-connection-2/: README.md  main.cpp
5_1/: README.md  main.cpp
5_2/: README.md  main.cpp
5_3/: README.md  main.cpp
6_2/: README.md  main.cpp
6_3/: README.md  main.cpp
6_4/: README.md  main.cpp
